correction mobile footer

--- a/css/style.css
+++ b/css/style.css
@@ -510,8 +510,7 @@ nav ul li:hover {
 
 .activites-cards{
     grid-template-columns: 1fr;
-}
-
+    gap: 15px;
 }
 
 /* Footer Mobile version */
@@ -520,5 +519,6 @@ nav ul li:hover {
 grid-template-columns: 1fr;
 gap: 50px;
 padding: 30px;
+margin-top: 35px;
 }
-
+}
